; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/wireless/mediatek/mt76/extr_dma.c_mt76_dma_dequeue.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/wireless/mediatek/mt76/extr_dma.c_mt76_dma_dequeue.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mt76_dev = type { i32 }
%struct.mt76_queue = type { i32, i32, i32, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

@MT_DMA_CTL_DMA_DONE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (%struct.mt76_dev*, %struct.mt76_queue*, i32, i32*, i32*, i32*)* @mt76_dma_dequeue to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @mt76_dma_dequeue(%struct.mt76_dev* %0, %struct.mt76_queue* %1, i32 %2, i32* %3, i32* %4, i32* %5) #0 {
  %7 = alloca i8*, align 8
  %8 = alloca %struct.mt76_dev*, align 8
  %9 = alloca %struct.mt76_queue*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i32*, align 8
  %14 = alloca i32, align 4
  store %struct.mt76_dev* %0, %struct.mt76_dev** %8, align 8
  store %struct.mt76_queue* %1, %struct.mt76_queue** %9, align 8
  store i32 %2, i32* %10, align 4
  store i32* %3, i32** %11, align 8
  store i32* %4, i32** %12, align 8
  store i32* %5, i32** %13, align 8
  %15 = load %struct.mt76_queue*, %struct.mt76_queue** %9, align 8
  %16 = getelementptr inbounds %struct.mt76_queue, %struct.mt76_queue* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 8
  store i32 %17, i32* %14, align 4
  %18 = load i32*, i32** %13, align 8
  store i32 0, i32* %18, align 4
  %19 = load %struct.mt76_queue*, %struct.mt76_queue** %9, align 8
  %20 = getelementptr inbounds %struct.mt76_queue, %struct.mt76_queue* %19, i32 0, i32 2
  %21 = load i32, i32* %20, align 8
  %22 = icmp ne i32 %21, 0
  br i1 %22, label %24, label %23

23:                                               ; preds = %6
  store i8* null, i8** %7, align 8
  br label %63

24:                                               ; preds = %6
  %25 = load i32, i32* %10, align 4
  %26 = icmp ne i32 %25, 0
  br i1 %26, label %41, label %27

27:                                               ; preds = %24
  %28 = load %struct.mt76_queue*, %struct.mt76_queue** %9, align 8
  %29 = getelementptr inbounds %struct.mt76_queue, %struct.mt76_queue* %28, i32 0, i32 3
  %30 = load %struct.TYPE_2__*, %struct.TYPE_2__** %29, align 8
  %31 = load i32, i32* %14, align 4
  %32 = sext i32 %31 to i64
  %33 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %30, i64 %32
  %34 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %33, i32 0, i32 0
  %35 = load i32, i32* %34, align 4
  %36 = load i32, i32* @MT_DMA_CTL_DMA_DONE, align 4
  %37 = call i32 @cpu_to_le32(i32 %36)
  %38 = and i32 %35, %37
  %39 = icmp ne i32 %38, 0
  br i1 %39, label %41, label %40

40:                                               ; preds = %27
  store i8* null, i8** %7, align 8
  br label %63

41:                                               ; preds = %27, %24
  %42 = load %struct.mt76_queue*, %struct.mt76_queue** %9, align 8
  %43 = getelementptr inbounds %struct.mt76_queue, %struct.mt76_queue* %42, i32 0, i32 0
  %44 = load i32, i32* %43, align 8
  %45 = add nsw i32 %44, 1
  %46 = load %struct.mt76_queue*, %struct.mt76_queue** %9, align 8
  %47 = getelementptr inbounds %struct.mt76_queue, %struct.mt76_queue* %46, i32 0, i32 1
  %48 = load i32, i32* %47, align 4
  %49 = srem i32 %45, %48
  %50 = load %struct.mt76_queue*, %struct.mt76_queue** %9, align 8
  %51 = getelementptr inbounds %struct.mt76_queue, %struct.mt76_queue* %50, i32 0, i32 0
  store i32 %49, i32* %51, align 8
  %52 = load %struct.mt76_queue*, %struct.mt76_queue** %9, align 8
  %53 = getelementptr inbounds %struct.mt76_queue, %struct.mt76_queue* %52, i32 0, i32 2
  %54 = load i32, i32* %53, align 8
  %55 = add nsw i32 %54, -1
  store i32 %55, i32* %53, align 8
  %56 = load %struct.mt76_dev*, %struct.mt76_dev** %8, align 8
  %57 = load %struct.mt76_queue*, %struct.mt76_queue** %9, align 8
  %58 = load i32, i32* %14, align 4
  %59 = load i32*, i32** %11, align 8
  %60 = load i32*, i32** %12, align 8
  %61 = load i32*, i32** %13, align 8
  %62 = call i8* @mt76_dma_get_buf(%struct.mt76_dev* %56, %struct.mt76_queue* %57, i32 %58, i32* %59, i32* %60, i32* %61)
  store i8* %62, i8** %7, align 8
  br label %63

63:                                               ; preds = %41, %40, %23
  %64 = load i8*, i8** %7, align 8
  ret i8* %64
}

declare dso_local i32 @cpu_to_le32(i32) #1

declare dso_local i8* @mt76_dma_get_buf(%struct.mt76_dev*, %struct.mt76_queue*, i32, i32*, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
